--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
 
     <h2>Optical Computer Mouse</h2>
     <p>The optical computer mouse is an old version of a mouse</p>
-    <a href="">rae's digital object</a>
+    <a href="https://rae-school.github.io/coding-in-a-circle/"
+      >rae's digital object</a
+    >
+
+    <a href="boot.js">boot page</a>
     <!-- <header></header>
     <nav></nav>
     <main></main>
