add class practice and assignment

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="visual.css" />
     <title> </title>
   </head>
   <body>
@@ -24,7 +24,7 @@
       >rae's digital object</a
     >
 
-    <a href="boot.js">boot page</a>
+    <a href="boot.html">boot page</a>
     <!-- <header></header>
     <nav></nav>
     <main></main>
