--- a/index.html
+++ b/index.html
@@ -7,24 +7,19 @@
     <title> </title>
   </head>
   <body>
-    <h1>Image</h1>
-    <p>
-      Although digital objects can be simple or complex, I chose to focus on a
-      simple digital object made up of a single file; an image. In this short
-      essay, I aim to conduct a formal analysis of both the metadata and
-      informational content of an image I took. The digital object I have chosen
-      is a photo of a necklace that appears to be composed of both metallic and
-      brightly colored beadwork.
-    </p>
-    <img src="images/more-rando-gauss-x.png" alt="" />
-
-    <h2>Optical Computer Mouse</h2>
-    <p>The optical computer mouse is an old version of a mouse</p>
-    <a href="https://rae-school.github.io/coding-in-a-circle/"
+    <div class="container">
+      <a href="object.html">my digital object</a>
+      <a href="boot.html">boot page</a>
+      <a href="place.html">place</a>
+      <a href="https://rae-school.github.io/coding-in-a-circle/"
       >rae's digital object</a
     >
+    <h1></h1>
+    <p></p>
 
-    <a href="boot.html">boot page</a>
+    <h2></h2>
+    <p> </p>
+
     <!-- <header></header>
     <nav></nav>
     <main></main>
