update index and place

--- a/index.html
+++ b/index.html
@@ -3,26 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="visual.css" />
+    <link rel="stylesheet" type="text/css" href="home.css" />
     <title> </title>
   </head>
   <body>
-    <div class="container">
+    <h1>Beimnet's Page</h1>
+    <p></p>
+    <div class="grid" id="links">
       <a href="object.html">my digital object</a>
       <a href="boot.html">boot page</a>
       <a href="place.html">place</a>
       <a href="https://rae-school.github.io/coding-in-a-circle/"
-      >rae's digital object</a
-    >
-    <h1></h1>
-    <p></p>
+        >rae's digital object</a
+      >
+    </div>
 
+    <button id="button">change background color</button>
+    <a id="cloud">cloud</a>
     <h2></h2>
-    <p> </p>
-
-    <!-- <header></header>
-    <nav></nav>
-    <main></main>
-    <footer></footer> -->
+    <p></p>
+    <script src="button.js"></script>
   </body>
 </html>
