--- a/place.html
+++ b/place.html
@@ -19,7 +19,7 @@
       Orthodox faith. Comprising 37 islands with 27 housing monasteries,
       churches, and the remnants of palaces, it holds immense historical
       significance as some of the oldest structures in the region.
-      <a href="https://www.laketana-biosphere.com/visit/monasteries/"
+      <a id="link" href="https://www.laketana-biosphere.com/visit/monasteries/"
         >The Lake Tana Monasteries</a
       >
       within it are home to many religious artifacts.
