--- a/object.html
+++ b/object.html
@@ -7,27 +7,43 @@
     <title> </title>
   </head>
   <body>
-    <h1>Image</h1>
-    <p>
-      Although digital objects can be simple or complex, I chose to focus on a
-      simple digital object made up of a single file; an image. In this short
-      essay, I aim to conduct a formal analysis of both the metadata and
-      informational content of an image I took. The digital object I have chosen
-      is a photo of a necklace that appears to be composed of both metallic and
-      brightly colored beadwork.
-    </p>
+    <div>
+      <h1>Image</h1>
+      <p>
+        Although digital objects can be simple or complex, I chose to focus on a
+        simple digital object made up of a single file; an image. In this short
+        essay, I aim to conduct a formal analysis of both the metadata and
+        informational content of an image I took. The digital object I have
+        chosen is a photo of a necklace that appears to be composed of both
+        metallic and brightly colored beadwork.
+      </p>
+    </div>
     <img src="images/more-rando-gauss-x.png" alt="" />
 
-    <h2>Optical Computer Mouse</h2>
-    <p>The optical computer mouse is an old version of a mouse</p>
-    <a href="https://rae-school.github.io/coding-in-a-circle/"
-      >rae's digital object</a
-    >
+    <div>
+      <h2>Exif Data</h2>
+      <p>
+        Using the exif-test code I wrote in class, I got the metadata of this
+        image and will be approaching it from an anti-interpretive digital
+        humanities perspective to start. According to the authors of
+        <cite
+          >“Neoliberal Tools (and Archives): A Political History of Digital
+          Humanities,”</cite
+        >
+        “Digital Humanities instead aims to archive materials, produce data, and
+        develop software, while bracketing off the work of interpretation to a
+        later moment or leaving it to other scholars…” (Allington et al 2016).
+      </p>
+    </div>
+
+    <div>
+      <h2>Optical Computer Mouse</h2>
+      <p>The optical computer mouse is an old version of a mouse</p>
+      <a href="https://rae-school.github.io/coding-in-a-circle/"
+        >rae's digital object</a
+      >
+    </div>
 
     <a href="boot.html">boot page</a>
-    <!-- <header></header>
-    <nav></nav>
-    <main></main>
-    <footer></footer> -->
   </body>
 </html>
