Adding event and question

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <a href="https://rae-school.github.io/coding-in-a-circle/"
         >rae's digital object</a
       >
+      <a href="question.html">assignment 10</a>
     </div>
 
     <button id="button">change background color</button>
